# tzcp

./: .gitignore  MANIFEST.in  README.md  gen.sh  pyproject.toml  realsense.proto  setup.cfg  setup.py  tbk.proto
ros/: ackermann.proto  geometry.proto  nav.proto  sensor.proto  std.proto
ssl/vision/: messages_robocup_ssl_wrapper.proto  messages_robocup_ssl_wrapper_legacy.proto  messages_robocup_ssl_wrapper_tracked.proto
tbk/: param.proto  tbk.proto  tbk_test.proto
tzcp/: realsense.proto
tzcp/ros/: ackermann.proto  geometry.proto  nav.proto  sensor.proto
tzcp/ssl/ref/: ssl_game_controller_auto_ref.proto  ssl_game_controller_team.proto  ssl_game_event_2019.proto  ssl_referee.proto
tzcp/ssl/rocos/: zss_debug.proto  zss_geometry.proto  zss_rec_old.proto  zss_vision_detection.proto
tzcp/ssl/vision/: messages_robocup_ssl_geometry_legacy.proto  messages_robocup_ssl_wrapper.proto  messages_robocup_ssl_wrapper_legacy.proto  messages_robocup_ssl_wrapper_tracked.proto
tzcp/tbk/: tbk.proto  tbk_rpc.proto
